// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<styled.div>
  <styled.header>
    <styled.h1 />
    <styled.button
      onClick={[Function]}
    >
      ×
    </styled.button>
  </styled.header>
  <styled.div>
    <styled.h4
      major={true}
    >
       
      <WeatherDegree
        units="celcius"
      />
    </styled.h4>
  </styled.div>
</styled.div>
`;

exports[`renders 2`] = `
<styled.div>
  <styled.header>
    <styled.h1
      title="Moscow"
    >
      Moscow
    </styled.h1>
    <styled.button
      onClick={[Function]}
    >
      ×
    </styled.button>
  </styled.header>
  <styled.header>
    <styled.h4>
      Update every 
      0.0016666666666666668
       minutes
    </styled.h4>
  </styled.header>
  <styled.div>
    <styled.h4
      major={true}
    />
  </styled.div>
  <styled.div>
    <styled.h4
      major={true}
    >
       
      <WeatherDegree
        units="celcius"
      />
    </styled.h4>
    <styled.h4>
      <WeatherIcon
        weather={
          Object {
            "main": Object {
              "description": "mist",
              "temp": "-10",
            },
          }
        }
      />
    </styled.h4>
  </styled.div>
</styled.div>
`;
